Overhaul section on dR for test problem

--- a/prelim/content/intro.tex
+++ b/prelim/content/intro.tex
@@ -30,7 +30,7 @@ Thus, a significant amount of insight into possible design improvements can be o
 Here follows the layout of this document.
 Chapter \ref{chap:bg} first provides relevant background on radiation transport, perturbation theory as it applies to radiation transport, and shape optimization methods.
 Chapter \ref{chap:dR} provides the mathematical basis for the geometry optimization method and describes how it can be utilized using available software packages.
-Chapter \ref{chap:testprob} introduces a simple test problem and shows the results of the optimization method.
+Chapter \ref{chap:tp} introduces a simple test problem and shows the results of the optimization method.
 Lastly, Chapter \ref{chap:proposal} is the proposal for the additional work that will be done in order to complete the final dissertation.
 
 % Automated deterministic nuclear system optimizer
