Update year to 2021

--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -23,7 +23,7 @@
 \author{Lucas J. Jacobson}
 \department{Nuclear Engineering and Engineering Physics}
 
-\date{2020}  % Used on the copywrite page
+\date{2021}  % Used on the copyright page
 
 \begin{document}
 
